# itis-diploma-backend

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
docs/: create_application_pipeline.puml  give_access_pipeline.puml
src/: consumer.py  producer.py
src/api/: urls.py
src/api/filters/: application.py  resource.py
src/api/permissions/: application.py  tenant.py
src/api/v1/: urls.py
src/bot/: start_bot.py  utils.py
src/bot/logic/: notifier.py
src/config/: middleware.py  settings.py  urls.py
src/core/: admin.py  consume.py  utils.py
src/core/enums/: application.py  grant.py  user.py  user_role.py
src/core/forms/: admin_grant.py  admin_user.py
src/core/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_application_created_at_application_updated_at.py  0004_grant.py  0005_grant_status.py  0006_remove_grant_is_active_remove_grant_need_to_remove_and_more.py  0007_alter_application_options_alter_grant_options.py  0008_user_invite_status_invitationtoken.py  0009_grant_application.py  0010_application_scope.py  0011_grant_scope_alter_application_scope.py  0012_alter_grant_scope_command.py  0013_alter_command_options_command_command_name.py  0014_rename_executing_command_command_executing_pattern.py  0015_resource_commands_alter_command_resource.py  0016_resource_url.py  0017_alter_resource_url.py  0018_rename_command_commandpattern.py  0019_tenant_tenantcreationrequest_and_more.py  0020_alter_resource_commands_alter_resource_url.py  0021_remove_resource_url.py  0022_user_telegram_id_alter_resource_commands.py  (+2 more)
src/core/models/: team.py  (+10 more)
(+22 files in other folders)
